--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="img/avatar.png" alt="avatar da Vitória" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Vitória</p>
         <h1>Estou aprendendo programação</h1>
-        <p>Sou estudante do segundo ano do ensino médio e tenho a matéria de pensamento computacional nele, estou usando HTML, CSS e JavaScript. Veja os projetos
+        <p>Sou estudante do segundo ano do ensino médio e tenho a matéria de pensamento computacional, estou usando HTML, CSS e JavaScript. Veja os projetos
             que já desenvolvi!</p>
         <p>Minhas habilidades</p>
         <div>
@@ -34,11 +34,10 @@
                 <div class="card">
                     <img src="img/1-PROJETO.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
-                        <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
-                            favoritos, incluindo informações sobre os autores, datas de publicação e links para compra
-                            na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
-                            externas do Google Fonts.
+                        <h5 class="card-title">Montando página web</h5>
+                        <p class="card-text">Este projeto utilizando a responsividade em apliações com HTML e CSS.
+                            Construi um site com HTML e CSS, aplique a estratégia mobile-first no desenvolvimento de site
+                            Utilizei media queries na construção de layouts responsivos. Foi um projeto interessante e divertido.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o projeto</button>
@@ -48,14 +47,12 @@
             <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/2-PROJETO.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
-                            Artificial</h5>
-                        <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
-                            impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
-                            pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
-                            futuro da IA.</p>
+                        <h5 class="card-title">Montando a página Web</h5>
+                        <p class="card-text">Neste projeto desenvolvi melhor o site com o HTML e CSS, também desenvolvi uma página interativa de estudo com flash cards, criei efeitos de rotação 
+                            nos elementos da página, e aprofundei meus conhecimentos em JavaScript.
+                            </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
                             o projeto</button>
                     </div>
@@ -65,13 +62,12 @@
             <!-- Projeto 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/3-PROJETO.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
+                        <h5 class="card-title">Página web
                         </h5>
-                        <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
-                            astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
-                            forma da Terra através de cenários dinâmicos e diálogos informativos.
+                        <p class="card-text">Nesse projeto desenvolvi um site de assinatura de conteúdo. Criei um repositório para armazenar o código do projeto
+                            realize o deploy de um site através do Github Pages ou Vercel e explorei os ajustes para a página.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o projeto</button>
@@ -80,7 +76,7 @@
             </div>
         </div>
     </main>
-
+Fernanda
     <!-- Modal 1 -->
     <div class="modal" id="modal1" tabindex="-1">
         <div class="modal-dialog">
@@ -90,27 +86,22 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto é uma página web criada com HTML e CSS, destinada a exibir uma coleção pessoal de
-                        livros favoritos. O objetivo é criar um ambiente virtual onde seja possível compartilhar
-                        seus livros preferidos, fornecendo uma descrição breve de cada um, incluindo o autor, o ano
-                        de publicação e uma opção de compra.</p>
+                    <p>O projeto é uma página web criada com HTML e CSS, o objetivo é criar um ambiente virtual onde seja possível compartilhar
+                        algo de interesse seu e da outras pessoas.</p>
                     <p>A estrutura do site é baseada em HTML, que define a semântica e o layout do conteúdo,
                         enquanto o CSS é usado para estilizar a página visualmente, incluindo cores, tipografia e a
                         disposição dos elementos.</p>
                     <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
-                        principal (.container) que apresenta o propósito do site e a coleção de livros em uma seção
-                        flexível (.livros). Cada livro é destacado em seu próprio contêiner (.livro), mostrando uma
-                        imagem da capa, detalhes do livro e um link de compra. O design responsivo é garantido pelo
-                        uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de
+                        principalmente, tag viewport e um layout flexível que se adapta a diferentes tamanhos de
                         tela.</p>
                     <p>O CSS personaliza o visual do site, usando variáveis para cores, estilizando o texto com uma
                         fonte importada do Google Fonts e aplicando um esquema de cores suaves e botões interativos.
                         O uso de HTML e CSS é importante pois assim é possível criar um site acessível e
                         esteticamente agradável sem a necessidade de scripts complexos, com foco na usabilidade e na
                         experiência da pessoa usuária. A escolha da tipografia e do esquema de cores contribui para
-                        a atmosfera acolhedora do site, incentivando a exploração da coleção de livros.</p>
-                    <img src="img/projeto-1.png" class="img-fluid w-100"
-                        alt="Imagem representativa do projeto de uma biblioteca online">
+                        a atmosfera acolhedora do siFernandate.</p>
+                    <img src="img/1-PROJETO.png" class="img-fluid w-100"
+                        alt="Imagem representativa do projeto">
                 </div>
                 <div class="modal-footer">
                     <a href="https://femascheti.github.io/minhas-leituras/">Ver projeto ao vivo</a>
@@ -141,9 +132,7 @@
                         escolhas do jogador, e determinando o fluxo da narrativa através de uma série de perguntas e
                         respostas.</p>
                     <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
-                        principal (.container) que apresenta o propósito do site e a coleção de livros em uma seção
-                        flexível (.livros). Cada livro é destacado em seu próprio contêiner (.livro), mostrando uma
-                        imagem da capa, detalhes do livro e um link de compra. O design responsivo é garantido pelo
+                        principal (.container) que apresenta o propósito do site. O design responsivo é garantido pelo
                         uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de
                         tela.</p>
                     <p>Os scripts JavaScript incluem módulos para gerar nomes aleatórios, definir as perguntas e as
@@ -153,8 +142,8 @@
                         na criação de uma experiência interativa que não apenas entretém, mas também educa os jogadores
                         sobre a complexidade ética e social da IA, incentivando a reflexão crítica sobre o papel da
                         tecnologia em nossas vidas.
-                    </p>
-                    <img src="img/projeto-2.png" class="img-fluid w-100"
+                    </p>Fernanda
+                    <img src="img/2-PROJETO.png" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
@@ -163,7 +152,7 @@
                     <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver código do
                         projeto</a>
                 </div>
-            </div>
+            </div>Fernanda
         </div>
     </div>
 
@@ -176,9 +165,8 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto é uma aplicação educativa interativa focada em ensinar conceitos básicos de
-                        astronomia. Utiliza uma série de scripts associados a diferentes atores (sprites) e
-                        cenários para criar uma experiência de aprendizado envolvente. O objetivo é familiarizar
+                    <p>O projeto é uma aplicação educativa interativa focada em ensinar conceitos básicos. Utiliza uma série de scripts associados a diferentes atores (sprites) 
+                        e cenários para criar uma experiência de aprendizado envolvente. O objetivo é familiarizar
                         os usuários com tópicos como as fases da Lua, eclipses, a visibilidade de diferentes
                         constelações dependendo da localização geográfica na Terra, e a forma da Terra, através
                         de interações e visualizações dinâmicas.</p>
@@ -195,7 +183,7 @@
                         interativa. O uso de cenários, movimentos, e diálogos dinâmicos ajuda a criar uma
                         experiência de aprendizado mais rica e memorável, encorajando os usuários a explorar e
                         interagir com o conteúdo de maneira ativa, em vez de passivamente.</p>
-                    <img src="img/projeto-3.png" alt="Projeto 3" class="img-fluid w-100">
+                    <img src="img/3-PROJETO.png" alt="Projeto 3" class="img-fluid w-100">
                 </div>
                 <div class="modal-footer">
                     <a href="https://scratch.mit.edu/projects/951732825/">Ver projeto ao vivo</a>
